--- a/.abf.yml
+++ b/.abf.yml
@@ -1,4 +1,4 @@
 sources:
-  "pgfopts.doc.tar.xz": a6ffda01055d8ae3b0a359af95381629bf158119
-  "pgfopts.source.tar.xz": b8a3bb6e6183077a9a3d7a396e9d0e44d6eb2035
-  "pgfopts.tar.xz": 8861f9b2f0c1fddc020272e5978fb978b66f303a
+  pgfopts.doc.tar.xz: 8fead7e04324a57130b3198d942bb25db091ac23
+  pgfopts.source.tar.xz: 17bb3240f8c58fe3be35365eee43c7edc11dae77
+  pgfopts.tar.xz: a2fdc0fc442576f7c3e6c351af05ee547e1bcc37
